# AutoController2

./: .gitignore  CMakeLists.txt  README.md  defines.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.rc
Enums/: system.h
Helpers/: audioconversionutils.cpp  audioconversionutils.h  captureholder.cpp  captureholder.h  jsonhelper.cpp  jsonhelper.h  mediadiscoverer.cpp  mediadiscoverer.h  serialholder.cpp  serialholder.h  stickpainter.cpp  stickpainter.h
Hex/: Joystick.h
Hex/AutoController2/: AutoController2.c  AutoController2.hex
Logo/: icon.psd
Managers/: audiomanager.cpp  audiomanager.h  joystickmanager.cpp  joystickmanager.h  keyboardmanager.cpp  keyboardmanager.h  logmanager.cpp  logmanager.h  managercollection.h  programmanager.cpp  programmanager.h  serialmanager.cpp  serialmanager.h  videomanager.cpp  videomanager.h  vlcmanager.cpp  vlcmanager.h
Programs/: programbase.cpp  programbase.h  settingbase.h
Programs/Development/: devframecapture.cpp  devframecapture.h
Programs/Modules/: modulebase.cpp  modulebase.h
Programs/Modules/Common/: brightnessmean.cpp  brightnessmean.h  framecapture.cpp  framecapture.h  runcommand.cpp  runcommand.h
Programs/Settings/: settingbase.h  settingcolor.cpp  settingcolor.h  settingcombobox.cpp  settingcombobox.h  settingdoublespinbox.cpp  settingdoublespinbox.h  settinglineedit.cpp  settinglineedit.h  settingspinbox.cpp  settingspinbox.h  settingtextbrowser.cpp  settingtextbrowser.h  settingtextedit.cpp  settingtextedit.h
Programs/System/: commandrecorder.cpp  commandrecorder.h  customcommand.cpp  customcommand.h
